<resources>
    <string name="app_name">SQLiteAgenda</string>
    <string name="titulo">AGENDA</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">E-mail</string>
    <string name="insertar">Insertar</string>
    <string name="borrar">Borrar</string>
    <string name="actualizar">Actualizar</string>
    <string name="buscar">Buscar</string>
</resources>
