<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="co.comss.sqliteagenda.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="AGENDA"
        android:textSize="30dp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:id="@+id/eNombre"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:id="@+id/eTelefono"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:id="@+id/eMail"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bInsertar"
        android:textColor="@color/black"
        android:text="@string/insertar"
        android:textSize="25dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bActualizar"
        android:textColor="@color/black"
        android:text="@string/actualizar"
        android:textSize="25dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bBorrar"
        android:textColor="@color/black"
        android:text="@string/borrar"
        android:textSize="25dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bBuscar"
        android:text="@string/buscar"
        android:textColor="@color/black"
        android:textSize="25dp"/>

</LinearLayout>
